[project]
name = "cat-discord-bot"
version = "0.3.1"
description = ""
authors = [{name = "Walfask"}]
license = "MIT"

dependencies = [
    "aiohttp==3.10.10",
    "audioop-lts==0.2.1",
    "discord-py==2.4.0",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.1",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pre-commit==4.0.1",
    "ruff==0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
fixable = ["ALL"]
