[project]
name = "cat-discord-bot"
version = "0.3.1"
description = ""
authors = [{name = "Walfask"}]
license = "MIT"
requires-python = ">=3.13"

dependencies = [
    "aiocron>=2.1",
    "aiohttp>=3.10.10",
    "audioop-lts>=0.2.2",
    "discord-py>=2.6.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.14.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
fixable = ["ALL"]
